--- a/package.json
+++ b/package.json
@@ -13,12 +13,22 @@
   },
   "dependencies": {
     "@astrojs/markdoc": "^0.4.4",
+    "@astrojs/netlify": "^3.0.1",
     "@astrojs/preact": "^2.2.2",
+    "@astrojs/react": "^3.0.0",
     "@astrojs/tailwind": "^4.0.0",
-    "@supabase/supabase-js": "^2.32.0",
-    "astro": "^2.10.7",
-    "preact": "^10.6.5",
-    "tailwindcss": "^3.0.24"
+    "@supabase/supabase-js": "^2.33.1",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro": "^2.10.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.274.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9"
